--- a/predict.ipynb
+++ b/predict.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = 'It is important to note that each of the five personality factors represents a range between two extremes. For example, extraversion represents a continuum between extreme extraversion and extreme introversion. In the real world, most people lie somewhere in between the two polar ends of each dimension. These five categories are usually described as follows.'"
+    "text = 'I’ve been in the security industry for a little over eight years. I started off as a penetration tester at Matasano Security and eventually worked on application security, intrusion detection, and incident response at companies like Addepar and Robinhood.I’ve been reading Hacker News since I was 14, and I always knew I’d eventually want to start a software company. In late 2020, I read The Launchpad for the first time, and I decided to apply to Y Combinator with an idea I had been considering. I was accepted, and I left Robinhood to start building.The original idea for Observa was to build a lightweight intrusion detection system targeting earlier-stage companies. We spent a lot of time and effort building this at Robinhood, and I figured there was some 80/20 rule where the low-hanging fruit could be detected by a simpler, less expensive system. This system could provide value to startups that weren’t ready to invest in the more complicated setup.'
    ]
   },
   {
